--- a/index.html
+++ b/index.html
@@ -145,20 +145,20 @@
 		   <div class=" works-name">
 		   	<h1>School website</h1>
 		   </div>
-		   <a href="school/school.html" target="_blank" class="works-logo1"></a>
+		   <a href="school/index.html" target="_blank" class="works-logo1"></a>
 			
 		</div>
 		<div class="col-sm-4 works">
 			<div class="works-name">
 		   	<h1>Professor Profile</h1>
 		   </div>
-		   <a href="profile/profile.html" target="_blank" class="works-logo2"></a>
+		   <a href="profile/index.html" target="_blank" class="works-logo2"></a>
 		</div>
 		<div class="col-sm-4 works">
 			<div class="works-name">
 		   	<h1>Event Website </h1>
 		   </div>
-		   <a href="reflux/reflux.html" target="_blank" class="works-logo3"></a>
+		   <a href="reflux/index.html" target="_blank" class="works-logo3"></a>
 		</div>
 
 
