--- a/reflux/index.html
+++ b/reflux/index.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link href="css/styles1.css" rel="stylesheet">
+    <link href="css/mystyles.css" rel="stylesheet">
 
     
 </head>
