--- a/school/index.html
+++ b/school/index.html
@@ -8,14 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style3.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <div class="container-fluid">
   <div class="row row-header">
      <div class="col-sm-3 col-xs-12">
          <div class="main-logo col-xs-12">
-         <img class="img-responsive logo" src="css/img3/logo.png">
+         <img class="img-responsive logo" src="css/img/logo.png">
          </div>     
       </div>
      <div class="col-sm-6 col-xs-12">
