--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
       
           <ul class="nav navbar-nav navbar-right col-sm-6">
-            <li class="active"><a href="#home">Home</a></li>
+            <li class=""><a href="#home">Home</a></li>
              <li ><a href="#edu">EDUCATION</a></li>
              <li ><a href="#por">POR</a></li>
              <li ><a href="#skill">SKILLS</a></li>
