--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<div class="works-name">
 		   	<h1>Event Website </h1>
 		   </div>
-		   <a href="https://nrj7017.github.io/reflux/" target="_blank" class="works-logo3"></a>
+		   <a href="reflux/index.html" target="_blank" class="works-logo3"></a>
 		</div>
 
 
